@@ -497,7 +497,7 @@ public:
 	afx_msg void OnUpdateRecordWav(CCmdUI* pCmdUI);
 	afx_msg void OnFileNew();
 	afx_msg BOOL OnFileSave(UINT id);
-	afx_msg BOOL OnFileSavesong(UINT id);
+	afx_msg BOOL OnFileSaveAs(UINT id);
 	afx_msg void OnFileLoadsong();
 	afx_msg void OnFileRevert();
 	afx_msg void OnHelpSaludos();
